kubernetes/undeployed/kafka/kube-apicurio-registry.yaml

apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: apicurio-registry
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "apicurio-registry.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: apicurio-registry-cert
        mode: SIMPLE
      hosts:
        - "apicurio-registry.vpn.rjst.de"
---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: apicurio-registry
  namespace: kafka
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  hosts:
    - "apicurio-registry.vpn.rjst.de"
  gateways:
    - apicurio-registry
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: example-apicurioregistry-mem-service
            port:
              number: 8080
